--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,17 @@
-node_modules/
-.idea/
-.vitepress/cache/deps/
+!**/glob-import/dir/node_modules
+.DS_Store
+.idea
+.pnpm-store
+*.cpuprofile
+*.local
+*.log
+/.vscode/
+.vitepress/cache
+dist
+dist-ssr
+explorations
+node_modules
+playground-temp
+temp
+TODOs.md
+.eslintcache
