--- a/.github/workflows/vite-workflow.yml
+++ b/.github/workflows/vite-workflow.yml
@@ -3,7 +3,9 @@ name: Deploy static content to Pages
 on:
   # Runs on pushes targeting the default branch
   push:
-    branches: ['main']
+    branches: ['master']
+  pull_request:
+    branches: ['master']
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
 # Sets the GITHUB_TOKEN permissions to allow deployment to GitHub Pages
