--- a/.gitignore
+++ b/.gitignore
@@ -7,7 +7,7 @@
 *.local
 *.log
 /.vscode/
-.vitepress/cache
+#.vitepress/cache
 dist-ssr
 explorations
 node_modules
@@ -15,3 +15,5 @@ playground-temp
 temp
 TODOs.md
 .eslintcache
+.vitepress/dist/
+.vitepress/cache/
